--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "three": "^0.97.0",
+    "three-orbitcontrols": "^2.96.3"
   },
   "scripts": {
     "start": "react-scripts start",
